--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div>
         <iframe src="https://map.concept3d.com/?id=1977#!w/40.5777,-105.08497,1;40.57738,-105.08436,1;1"
-        title="Concept3d College of Business Map" id="mapFrame" 
+        title="College of Business Map" id="mapFrame" 
         scrolling="no" allow="geolocation"></iframe>
 
         <div id="floatingQR">
