--- a/focustest.html
+++ b/focustest.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="device-width">
     <title>Map Kiosk</title>
     <link rel="stylesheet" href="./styles.css">
-
+    
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <!--This page will mostly consist of an embedded iframe containing a concept3d
     map, with a QR code overlay to provide access to mobile use-->
 
-    <div>
+    <div id="container">
         <iframe src="https://map.concept3d.com/?id=1977#!w/40.5777,-105.08497,1;40.57738,-105.08436,1;1"
         title="College of Business Map" id="mapFrame" 
         scrolling="no" allow="geolocation">
@@ -27,8 +27,7 @@
 
     </div>
 
-    <script src="./script.js"></script>
-
+    <script src="./testjs.js"></script>
 </body>
 
 </html>
