Changed iframe source to public link with wayfinding already initiated

--- a/rw_lobby.html
+++ b/rw_lobby.html
@@ -77,18 +77,20 @@
 
     <div>
         <!--Public Version-->
-        <!--
-            <iframe src="https://map.concept3d.com/?id=1977#!w/40.5777,-105.08497,1;40.57738,-105.08436,1;1"
+        
+            <iframe src="https://map.concept3d.com/?id=1977#!ct/0?s/?d/type:walking;ada:false;from:40.577690577902985,-105.08497537333949,1;to:40.57735831613718,-105.0842526116841,1;startName:Start%20Location;endName:End%20Location;"
             title="College of Business Map" id="mapFrame" 
             scrolling="no" allow="geolocation">
         </iframe>
-        -->
+        
 
         <!--Preview Version-->
+        <!--
             <iframe src="https://map.concept3d.com/?id=1977&preview=4MRgYOZC#!w/40.57769,-105.08509,0;40.57739,-105.08367,0;0"
             title="College of Business Map" id="mapFrame" 
             scrolling="no" allow="geolocation">
             </iframe>
+        -->
 
         <!-- QR code - removed due to 'security'
         <div id="floatingQR">
