Removed Student Resources, Operations, and All Rooms options. Added p to give instructions.

--- a/rw_mainlobbykiosk.html
+++ b/rw_mainlobbykiosk.html
@@ -19,13 +19,18 @@
                     <option value="Conference Rooms">Conference Rooms</option>
                     <option value="Study Rooms">Study Rooms</option>
                     <option value="Academic Programs">Academic Programs</option>
+                    <!--
                     <option value="Student Resources">Student Resources</option>
                     <option value="Operations">Operations</option>
                     <option value="All Rooms">All Rooms</option>
+                    -->
                 </select>
                 <select name="Room" id="roomID"></select>
                 <button id="btnDirections">Show Directions</button>
             </div>
+            <p id="instructions">To get directions, select a room and press "Show Directions",
+                or click and drag endpoint "B" on the map.
+            </p>
         </div>
     </div>
     <script src=".\changemenu.js" delay></script>
