Test alert for broken rooms. 165 - 170 are not working before this test

--- a/rw_mainlobbykiosk.html
+++ b/rw_mainlobbykiosk.html
@@ -29,7 +29,7 @@
                 <button id="btnDirections">Show Directions</button>
             </div>
             <p id="instructions">To get directions, select a room and press "Show Directions",
-                or click and drag endpoint "B" on the map.
+                or click and drag marker "B" on the map.
             </p>
         </div>
     </div>
