Updated some room names to match URLs (some were too long)

--- a/rw_mainlobbykiosk.html
+++ b/rw_mainlobbykiosk.html
@@ -31,6 +31,7 @@
             <p id="instructions">To get directions, select a room and press "Show Directions",
                 or click and drag marker "B" on the map.
             </p>
+            <p>For ADA-accessible routes, select "Show only accessible routes" on the left side menu.</p>
         </div>
     </div>
     <script src=".\changemenu.js" delay></script>
