Removed hyphens from room names, which are added for URL. Coded ADA button to append 'a' to end of URL and load ADA map

--- a/rw_mainlobbykiosk.html
+++ b/rw_mainlobbykiosk.html
@@ -26,13 +26,12 @@
                     -->
                 </select>
                 <select name="Room" id="roomID"></select>
-                <button id="btnDirections">Show Directions</button>
                 <div id="adaBox">
                     <input type="checkbox" id="adaCheck">
                     <img id="adaIcon" src=".\images\ada.svg.png">
                 </div>
             </div>
-            <p id="instructions">To get directions, select a room and press "Show Directions",
+            <p id="instructions">To get directions, select a room from the dropdown,
                 or click and drag marker "B" on the map.
             </p>
         </div>
