Updated ADA version to have z instead of a. Added specifications for rooms with too long of names for URL shortener.

--- a/rw_mainlobbykiosk.html
+++ b/rw_mainlobbykiosk.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="topbar">
-            <h2>Welcome to the College of Business. You are in Rockwell Hall West.</h2>
+            <h2>Welcome to the College of Business! You are in Rockwell Hall West.</h2>
         </div>
         <iframe id="mapFrame" scrolling="no" src="https://tinyurl.com/RWdefault"></iframe>
         <div id="bottombar">
