Updated ADA button so clicking it toggles checkbox

--- a/rw_mainlobbykiosk.html
+++ b/rw_mainlobbykiosk.html
@@ -31,7 +31,7 @@
                     <img id="adaIcon" src=".\images\ada.svg.png">
                 </div>
             </div>
-            <p id="instructions">To get directions, select a room from the dropdown,
+            <p id="instructions">To get directions select a room from the menu,
                 or click and drag marker "B" on the map.
             </p>
         </div>
