Added youAreHere function so HTML is more transferable. Fixed so clicking ADA on page load brings up ADA route.

--- a/rw_mainlobbykiosk.html
+++ b/rw_mainlobbykiosk.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="topbar">
-            <h2>Welcome to the College of Business! You are in Rockwell Hall West.</h2>
+            <h2 id="buildingLocation">Welcome to the College of Business! You are in </h2>
         </div>
         <iframe id="mapFrame" scrolling="no" src="https://tinyurl.com/RWdefault"></iframe>
         <div id="bottombar">
@@ -28,10 +28,10 @@
                 <select name="Room" id="roomID"></select>
                 <div id="adaBox">
                     <input type="checkbox" id="adaCheck">
-                    <img id="adaIcon" src=".\images\ada.svg.png">
+                    <img id="adaIcon" src="./images/ada.svg.png">
                 </div>
             </div>
-            <p id="instructions">To get directions select a room from the menu,
+            <p id="instructions">To get directions, select a room from the menu
                 or click and drag marker "B" on the map.
             </p>
         </div>
