Created html and js for RH south lobby. Moved old files to folder.

--- a/rh_southlobbykiosk.html
+++ b/rh_southlobbykiosk.html
@@ -4,7 +4,7 @@
     <!--IMPORTANT: Screen resolution must be set to 100% for page to load properly-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Rockwell West Main Lobby Kiosk</title>
+    <title>Rockwell Hall South Lobby Kiosk</title>
     <link rel="stylesheet" href=".\styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div id="topbar">
             <h2 id="buildingLocation">Welcome to the College of Business! You are in </h2>
         </div>
-        <iframe id="mapFrame" scrolling="no" src="https://tinyurl.com/RWdefault"></iframe>
+        <iframe id="mapFrame" scrolling="no" src="https://tinyurl.com/RHSdefault"></iframe>
         <div id="bottombar">
             <div id="navbuttons">
                 <select name="All Rooms" id="roomCat">
@@ -37,7 +37,7 @@
             </p>
         </div>
     </div>
-    <script src="./rw_lobby_script.js" delay></script>
+    <script src="./rh_s_lobby_script.js" delay></script>
     
 </body>
 </html>
