Changed 'click' to 'select' in directions

--- a/rh_southlobbykiosk.html
+++ b/rh_southlobbykiosk.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <p id="instructions">To get directions, select a room from the menu
-                or click and drag marker "B" on the map.
+                or select and drag marker "B" on the map.
             </p>
         </div>
     </div>
