Added coordinates for each room. Each room stored in object. Switched from pre generated URLs to URLs built from object info

--- a/rw118.html
+++ b/rw118.html
@@ -4,13 +4,13 @@
     <!--IMPORTANT: Screen resolution must be set to 100% for page to load properly-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Rockwell Hall South Lobby Kiosk</title>
+    <title>Rockwell West 118</title>
     <link rel="stylesheet" href=".\styles_portrait.css">
 </head>
 <body>
     <div id="container">
         <div id="topbar">
-            <h2 id="buildingLocation">Welcome to the College of Business! You are in </h2>
+            <h2 id="buildingLocation" data-location="118">Welcome to the College of Business! You are in </h2>
         </div>
         <iframe id="mapFrame" scrolling="no" src="https://tinyurl.com/RHSdefault"></iframe>
         <div id="bottombar">
@@ -37,7 +37,7 @@
             </p>
         </div>
     </div>
-    <script src="./rw118.js" delay></script>
+    <script src="./coordscript.js" delay></script>
     
 </body>
 </html>
