Created function to generate default URL for iframe src

--- a/rw118.html
+++ b/rw118.html
@@ -20,14 +20,16 @@
                     RW-2-lobby
                     RW-2-hallway-211
                     RW-2-hallway-213
+                    RW-2-hallway-west
                     RH-south-lobby
                     RH-north-lobby
                 This value should be based on the kiosk's location and will be
                 used to determine the starting location (Marker A) on the map
             -->
-            <h2 id="buildingLocation" data-location="RW-1-hallway-west">Welcome to the College of Business! You are in </h2>
+            <h2 id="buildingLocation" data-location="RH-south-lobby">
+                Welcome to the College of Business! You are in </h2>
         </div>
-        <iframe id="mapFrame" scrolling="no" src="https://tinyurl.com/RHSdefault"></iframe>
+        <iframe id="mapFrame" scrolling="no" src=""></iframe>
         <div id="bottombar">
             <div id="navbuttons">
                 <select name="All Rooms" id="roomCat">
