Cleaned up old files. Made fonts and menus bigger for accessibility. Created several variations of html pages for use in different parts of building

--- a/rw_1_hallway_central.html
+++ b/rw_1_hallway_central.html
@@ -4,8 +4,8 @@
     <!--IMPORTANT: Screen resolution must be set to 100% for page to load properly-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Rockwell West 118</title>
-    <link rel="stylesheet" href=".\styles_portrait.css">
+    <title>Rockwell West</title>
+    <link rel="stylesheet" href=".\styles.css">
 </head>
 <body>
     <div id="container">
@@ -26,7 +26,7 @@
                 This value should be based on the kiosk's location and will be
                 used to determine the starting location (Marker A) on the map
             -->
-            <h2 id="buildingLocation" data-location="RH-south-lobby">
+            <h2 id="buildingLocation" data-location="RW-1-hallway-central">
                 Welcome to the College of Business! You are in </h2>
         </div>
         <iframe id="mapFrame" scrolling="no" src=""></iframe>
@@ -54,7 +54,7 @@
             </p>
         </div>
     </div>
-    <script src="./coordscript.js" delay></script>
+    <script src="./script.js" delay></script>
     
 </body>
 </html>
