Created splash prompt to touch screen to get started

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,12 @@
             </p>
         </div>
     </div>
-    <script src="./script.js" delay></script>
-    
+    <div id="touchContainer">
+        <div id="touchNotice">
+            <img src="./images/touch.png" alt="Touch Icon">
+            <h1>Touch screen to get started!</h1>
+        </div>
+    </div>
+    <script src="./script.js" delay></script>   
 </body>
 </html>
