Added Look Here heading. Created page for RH south lobby

--- a/frontend/rh_south_lobby.html
+++ b/frontend/rh_south_lobby.html
@@ -26,7 +26,7 @@
                 This value should be based on the kiosk's location and will be
                 used to determine the starting location (Marker A) on the map
             -->
-            <h2 id="buildingLocation" data-location="RW-lobby">
+            <h2 id="buildingLocation" data-location="RH-south-lobby">
                 Welcome to the College of Business! You are in </h2>
         </div>
         <iframe id="mapFrame" scrolling="no" src=""></iframe>
