--- a/frontend/rw_1_hallway_107.html
+++ b/frontend/rw_1_hallway_107.html
@@ -54,6 +54,16 @@
             </p>
         </div>
     </div>
+    <div id="touchContainer">
+        <div id="touchNotice">
+            <div id="touchDirections">
+                <h1>Need Directions?</h1>
+                <h1>Look Here!</h1>
+            </div>
+            <img src="./images/touch.png" alt="Touch Icon">
+            <h1>Touch screen to get started</h1>
+        </div>
+    </div>
     <script src="./script.js" delay></script>
     
 </body>
