--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
                     <option value="Classrooms">Classrooms</option>
                     <option value="Conference Rooms">Conference Rooms</option>
                     <option value="Study Rooms">Study Rooms</option>
-                    <option value="Academic Programs">Academic Programs</option>
+                    <option value="Academic Support">Academic Support</option>
                     <!--
                     <option value="Student Resources">Student Resources</option>
                     <option value="Operations">Operations</option>
