Set up test page for netlify form submission

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
         <li><a href="./rw_lobby.html">rw_lobby.html</a></li>
         <li><a href="./rw-2-lobby.html">rw-2-lobby.html</a></li>
         <li><a href="./rh_south_lobby.html">rh_south_lobby</a></li>
+        <li><a href="./rw_1_hallway_107.html">rw_1_hallway_107 (for testing)</a></li>
     </ul>
     <!-- <script src="./script.js" delay></script>    -->
 </body>
