Updated form for testing. Will only affect dummy page

--- a/frontend/rw_1_hallway_107.html
+++ b/frontend/rw_1_hallway_107.html
@@ -31,7 +31,7 @@
         </div>
         <iframe id="mapFrame" scrolling="no" src=""></iframe>
         <div id="bottombar">
-            <form id="navbuttons" name="directionsRequest" method="POST" 
+            <form id="navbuttons" name="myForm" method="POST" 
             data-netlify="true">
                 <select name="All Rooms" id="roomCat">
                     <option value="Classrooms">Classrooms</option>
